--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,38 @@
     transform: rotate(360deg);
   }
 }
+
+body {
+  background-color: #282c34;
+}
+
+.NavbarList {
+  margin: 0px;
+}
+
+.Navbar {
+  background-color: darkslategray;
+  overflow: hidden;
+}
+
+.Navbar a {
+  float: left;
+  color: antiquewhite;
+  text-align: center;
+  padding: 16px;
+  list-style-type: none;
+  text-decoration: none;
+  font-size: 16px;
+}
+
+.Navbar a:hover {
+  background-color: antiquewhite;
+  color: darkslategray;
+}
+
+.Navbar input[type=text] {
+  float: right;
+  padding: 16px;
+  border: none;
+  font-size: 16px;
+}
